--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -18,6 +18,16 @@
     <link rel="stylesheet" href="css/jumbotron-narrow.css">
     <script src="js/jquery.min.js"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66789738-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body>
@@ -30,12 +40,11 @@
                 <li role="presentation"><a href="about.html">About</a></li>
             </ul>
         </nav>
-        <h3 class="text-muted">About Movie Hell</h3>
+        <h3 class="text-muted">Movie Hell</h3>
     </div>
 
-    <p>LC</p>
-    <p>licheng_xd@163.com</p>
-
+    <p>主页：<a href="http://lchml.com">lc's blog</a></p>
+    <p>邮箱：<a>licheng_xd@163.com</a></p>
     <footer class="footer">
         <p>&copy; LC 2015</p>
     </footer>
