--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,6 +20,17 @@
     <script src="js/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/movie.js"></script>
+    <script src="js/Base64.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66789738-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 
 <body onload="init()">
@@ -34,7 +45,17 @@
         </nav>
         <h3 class="text-muted">Movie Hell</h3>
     </div>
-
+    <div class="row">
+        <div class="col-lg-6" style="width: 100%">
+            <div class="input-group">
+                <input type="text" id="search_key" class="form-control" onkeypress="searchInput()" placeholder="Search Movie ...">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" onclick="searchMovie()" type="button">搜索</button>
+                </span>
+            </div><!-- /input-group -->
+        </div><!-- /.col-lg-6 -->
+    </div><!-- /.row -->
+    <br/>
     <div class="list-group" id="movie_list">
         <a class="list-group-item active">最近更新</a>
     </div>
