--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -28,6 +28,15 @@
       ga('send', 'pageview');
 
     </script>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "//hm.baidu.com/hm.js?2a79b8f2c726d310f748aca10af76b0f";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
 </head>
 
 <body>
