--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/jumbotron-narrow.css">
     <script src="js/jquery.min.js"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -28,15 +29,7 @@
       ga('send', 'pageview');
 
     </script>
-    <script>
-    var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
-      hm.src = "//hm.baidu.com/hm.js?2a79b8f2c726d310f748aca10af76b0f";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>
+    
 </head>
 
 <body>
@@ -45,8 +38,8 @@
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="index.html">Home</a></li>
-                <li role="presentation"><a href="about.html">About</a></li>
+                <li role="presentation"><a href="index.html">首页</a></li>
+                <li role="presentation"><a href="about.html">关于</a></li>
             </ul>
         </nav>
         <h3 class="text-muted">Movie Hell</h3>
@@ -59,6 +52,6 @@
     </footer>
 
 </div> <!-- /container -->
-
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256273064'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256273064%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
