--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,8 @@
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li role="presentation"><a href="index.html">首页</a></li>
+                <li role="presentation"><a href="index.html">电影</a></li>
+                <li role="presentation"><a href="ustv.html">美剧</a></li>
                 <li role="presentation"><a href="about.html">关于</a></li>
             </ul>
         </nav>
