--- a/src/main/webapp/ustv.html
+++ b/src/main/webapp/ustv.html
@@ -58,7 +58,7 @@
     <div class="row">
         <div class="col-lg-6" style="width: 100%">
             <div class="input-group">
-                <input type="text" id="search_key" class="form-control" onkeypress="searchInput()" placeholder="Search Movie ...">
+                <input type="text" id="search_key" class="form-control" onkeypress="searchInput()" placeholder="Search Key">
                 <span class="input-group-btn">
                     <button class="btn btn-default" onclick="searchMovie()" type="button">搜索</button>
                 </span>
