--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -35,6 +35,7 @@
 <body>
 
 <div class="container">
+    <a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
@@ -45,9 +46,10 @@
         </nav>
         <h3 class="text-muted">Movie Hell</h3>
     </div>
+    <p style="line-height:200%;text-indent:2em;padding-bottom:400px;color: #777777;font-size:120%;">Moviehell电影站所有资源来源于互联网网友交流，只供网络测试和学习交流所用。
+        所有视频版权归原权利人，如有关视频侵犯了你的权益，请联系告之，本站将于第一时间删除！
+        我们建议所有影视爱好者购买正版音像制品或去电影院观看最新大片。<br/><br/>联系方式：licheng_xd@163.com</p>
 
-    <p>主页：<a href="http://lchml.com">lc's blog</a></p>
-    <p>邮箱：<a>licheng_xd@163.com</a></p>
     <footer class="footer">
         <p>&copy; LC 2016</p>
     </footer>
