--- a/src/main/webapp/ustv.html
+++ b/src/main/webapp/ustv.html
@@ -45,6 +45,7 @@
 <body onload="initUstv()">
 
 <div class="container">
+    <a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
