--- a/src/main/webapp/documentary.html
+++ b/src/main/webapp/documentary.html
@@ -42,7 +42,7 @@
     </script>
 </head>
 
-<body onload="init()">
+<body onload="initDocumentary()">
 
 <div class="container">
     <a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
@@ -68,12 +68,12 @@
         </div><!-- /.col-lg-6 -->
     </div><!-- /.row -->
     <br/>
-    <div class="list-group" id="movie_list">
+    <div class="list-group" id="documentary_list">
         <a class="list-group-item active">最近更新</a>
     </div>
 
     <nav>
-        <ul class="pagination" id="pages">
+        <ul class="pagination" id="documentary_pages">
         </ul>
     </nav>
 
