--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,7 @@
 
 <div class="container">
     <a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
+    <a class="jandan-icon" href="http://jandan.net" target="_blank">煎蛋网</a>
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
