--- a/src/main/webapp/p1080.html
+++ b/src/main/webapp/p1080.html
@@ -5,20 +5,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
+    <!-- 有问题联系 licheng_xd@163.com -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.ico">
 
-    <title>about - Movie Hell</title>
+    <title>Movie Hell</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/jumbotron-narrow.css">
-    <script src="js/jquery.min.js"/>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+    <script src="js/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/movie.js"></script>
+    <script src="js/Base64.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -29,16 +31,23 @@
         ga('send', 'pageview');
 
     </script>
-    
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?2a79b8f2c726d310f748aca10af76b0f";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
 
-<body>
-<a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
-<a class="jandan-icon" href="http://jandan.net" target="_blank">煎蛋网</a>
-<a class="lofter-icon" href="http://licheng-xd.lofter.com/" target="_blank">Lofter摄影</a>
+<body onload="initP1080()">
+
 <div class="container">
     <a class="moviehell-icon" href="http://www.lchml.com" target="_blank">站长主页</a>
     <a class="jandan-icon" href="http://jandan.net" target="_blank">煎蛋网</a>
+    <a class="lofter-icon" href="http://licheng-xd.lofter.com/" target="_blank">Lofter摄影</a>
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
@@ -51,15 +60,31 @@
         </nav>
         <h3 class="text-muted">Movie Hell</h3>
     </div>
-    <p style="line-height:200%;text-indent:2em;padding-bottom:400px;color: #777777;font-size:120%;">Moviehell电影站所有资源来源于互联网网友交流，只供网络测试和学习交流所用。
-        所有视频版权归原权利人，如有关视频侵犯了你的权益，请联系告之，本站将于第一时间删除！
-        我们建议所有影视爱好者购买正版音像制品或去电影院观看最新大片。<br/><br/>联系方式：licheng_xd@163.com</p>
+    <div class="row">
+        <div class="col-lg-6" style="width: 100%">
+            <div class="input-group">
+                <input type="text" id="search_key" class="form-control" onkeypress="searchInput()" placeholder="Search Key">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" onclick="searchMovie()" type="button">搜索</button>
+                </span>
+            </div><!-- /input-group -->
+        </div><!-- /.col-lg-6 -->
+    </div><!-- /.row -->
+    <br/>
+    <div class="list-group" id="p1080_list">
+        <a class="list-group-item active">最近更新</a>
+    </div>
+
+    <nav>
+        <ul class="pagination" id="p1080_pages">
+        </ul>
+    </nav>
 
     <footer class="footer">
         <p>&copy; LC 2016</p>
     </footer>
 
 </div> <!-- /container -->
-<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256273064'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256273064%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));</script>
+
 </body>
 </html>
