--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -43,7 +43,7 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation"><a href="index.html">电影</a></li>
-                <li role="presentation"><a href="p1080.html">1080P</a></li>
+                <!--<li role="presentation"><a href="p1080.html">1080P</a></li>-->
                 <li role="presentation"><a href="ustv.html">美剧</a></li>
                 <li role="presentation"><a href="documentary.html">纪录片</a></li>
                 <li role="presentation"><a href="about.html">关于</a></li>
